# Projeto-Pesqueiro

./: .gitignore  README.md  index.html  pesqueiro.db  pyproject.toml  test.db
.circleci/: config.yml
.github/workflows/: lint-test-build.yml
App/api/: main.py
App/db/: connection.py
App/models/: cliente.py  comanda.py  item.py
App/schemas/: cliente.py  comanda.py  item.py
App/tests/: test_api.py  test_api_integration.py  test_mock.py
